--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,9 +2,14 @@
   "item.tutorialmod.sapphire":"Sapphire",
   "item.tutorialmod.ruby":"Ruby",
 
+  "item.tutorialmod.metal_detector":"Metal Detector",
+  "item.tutorialmod.pinecone":"Pinecone",
 
+  "tooltip.tutorialmod.metal_detector.tooltip": "Finds iron ore underground",
 
   "block.tutorialmod.sapphire_block":"Block of Sapphire",
+  "block.tutorialmod.sapphire_ore":"Sapphire Ore",
+  "block.tutorialmod.sound_block":"Sound Block",
 
   "creativetab.tutorial_tab": "Tutorial Tab"
 }
